This seems to make everything all right again.
Fix/revert a lot of threading changes made that effed things up.  Scheduled execs do not work well with VThreads, so always fork the running.