@@ -8,17 +8,13 @@ package com.salesforce.apollo.demesnes;
 
 import com.google.protobuf.Any;
 import com.google.protobuf.ByteString;
-import com.salesforce.apollo.cryptography.proto.Digeste;
-import com.salesforce.apollo.demesne.proto.DemesneParameters;
-import com.salesforce.apollo.demesne.proto.SubContext;
-import com.salesforce.apollo.test.proto.ByteMessage;
-import com.salesforce.apollo.test.proto.TestItGrpc;
-import com.salesforce.apollo.test.proto.TestItGrpc.TestItBlockingStub;
-import com.salesforce.apollo.test.proto.TestItGrpc.TestItImplBase;
 import com.salesforce.apollo.archipelago.*;
 import com.salesforce.apollo.comm.grpc.DomainSocketServerInterceptor;
 import com.salesforce.apollo.cryptography.Digest;
 import com.salesforce.apollo.cryptography.DigestAlgorithm;
+import com.salesforce.apollo.cryptography.proto.Digeste;
+import com.salesforce.apollo.demesne.proto.DemesneParameters;
+import com.salesforce.apollo.demesne.proto.SubContext;
 import com.salesforce.apollo.membership.Member;
 import com.salesforce.apollo.membership.stereotomy.ControlledIdentifierMember;
 import com.salesforce.apollo.model.demesnes.DemesneImpl;
@@ -37,6 +33,10 @@ import com.salesforce.apollo.stereotomy.identifier.spec.InteractionSpecification
 import com.salesforce.apollo.stereotomy.mem.MemKERL;
 import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.stereotomy.services.proto.ProtoKERLAdapter;
+import com.salesforce.apollo.test.proto.ByteMessage;
+import com.salesforce.apollo.test.proto.TestItGrpc;
+import com.salesforce.apollo.test.proto.TestItGrpc.TestItBlockingStub;
+import com.salesforce.apollo.test.proto.TestItGrpc.TestItImplBase;
 import io.grpc.*;
 import io.grpc.ForwardingClientCall.SimpleForwardingClientCall;
 import io.grpc.netty.DomainSocketNegotiatorHandler.DomainSocketNegotiator;
@@ -69,9 +69,9 @@ public class DemesneSmoke {
 
     private final static Class<? extends io.netty.channel.Channel>  clientChannelType = IMPL.getChannelType();
     private static final Class<? extends ServerDomainSocketChannel> serverChannelType = IMPL.getServerDomainSocketChannelClass();
-    private final static Executor                                   executor          = Executors.newCachedThreadPool(
-    Thread.ofVirtual().factory());
-    private              EventLoopGroup                             eventLoopGroup;
+
+    private final static Executor       executor = Executors.newVirtualThreadPerTaskExecutor();
+    private              EventLoopGroup eventLoopGroup;
 
     public static ClientInterceptor clientInterceptor(Digest ctx) {
         return new ClientInterceptor() {
