@@ -21,21 +21,20 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 
 class Transactioneer {
-    private final static Random                             entropy   = new Random();
-    private final static Logger                             log       = LoggerFactory.getLogger(Transactioneer.class);
-    private final static ScheduledExecutorService           scheduler = Executors.newScheduledThreadPool(1,
-                                                                                                         Thread.ofVirtual()
-                                                                                                               .factory());
-    private final        Executor                           executor  = Executors.newCachedThreadPool(
-    Thread.ofVirtual().factory());
-    private final        AtomicInteger                      completed = new AtomicInteger();
-    private final        CountDownLatch                     countdown;
-    private final        AtomicReference<CompletableFuture> inFlight  = new AtomicReference<>();
-    private final        int                                max;
-    private final        Mutator                            mutator;
-    private final        Duration                           timeout;
-    private final        Supplier<Txn>                      update;
-    private final        AtomicBoolean                      finished  = new AtomicBoolean();
+    private final static Random                   entropy   = new Random();
+    private final static Logger                   log       = LoggerFactory.getLogger(Transactioneer.class);
+    private final static ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1, Thread.ofVirtual()
+                                                                                                        .factory());
+
+    private final Executor                           executor  = Executors.newVirtualThreadPerTaskExecutor();
+    private final AtomicInteger                      completed = new AtomicInteger();
+    private final CountDownLatch                     countdown;
+    private final AtomicReference<CompletableFuture> inFlight  = new AtomicReference<>();
+    private final int                                max;
+    private final Mutator                            mutator;
+    private final Duration                           timeout;
+    private final Supplier<Txn>                      update;
+    private final AtomicBoolean                      finished  = new AtomicBoolean();
 
     public Transactioneer(Supplier<Txn> update, Mutator mutator, Duration timeout, int max, CountDownLatch countdown) {
         this.update = update;
